styles.css - decreased margin around #site-title to prevent the site-description line from getting cut off

--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ th {
 #site-title {
     font-size: 2em;
 	font-weight: bold;
-    margin: 0px 20px;
+    margin: 0px 10px;
     white-space: nowrap;
 }
 #site-description {
